[FIX][UI] Restore collapsed aside dropdown item icon left padding.
(cherry picked from commit 4e0aed4c793e32cb1267eeed62cd9aa5cfb20358)

--- a/themes/base_files/scss/feature/adminui.scss
+++ b/themes/base_files/scss/feature/adminui.scss
@@ -126,7 +126,6 @@ $color-light: rgba(0, 0, 0, 0.5); // Not replaced as it's only used for minor de
 }
 
 .tiki-admin aside.admin-nav .narrow .dropdown-item {
-    padding-left: 0;
     padding-right: 0;
 }
 
